"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2007-02-03	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-69-chpsim-02-13:
	  Added chpsim checkpointing and state diagnostic facilities, 
		enabled but yet untested.  
	  Refactored dependency functions in DependenceSet class.  


2007-02-02	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-69-chpsim-02-12:
	  State::step() now periodically checks progress for periodic
		automatic trace flushing, to use constant memory.  
	  Fixed minor diagnostic text-dump of trace file.  
		Added new multi-epoch test case to test/chpsim.
	  Next: checkpointing work.


2007-02-01	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-69-chpsim-02-11:
	  Bug fixes from testing trace saving and dumping.  
	  Very basic tracing verified with trace-dump examination.
	  New trace commands:
		'trace-flush-notify' -- enable/disable auto-flush notifications
		'trace-dump' -- textual dump of trace contents, currently
			NOT attached to any object file, or chpsim config.


2007-01-31	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-69-chpsim-02-10:
	  More trace read and dump methods all over.  
	  Next: testing and debugging traces.  


2007-01-30	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-69-chpsim-02-09:
	  chpsim: added (untested) 'advance' command, since it'll come in 
		handy for trace testing.  
		'trace-flush-interval' to get/set trace flush interval, duh!
	  State: only show non-zero cause event IDs.  
	  TraceManager: temp file now an fstream, since we need to copy it.
	  Next: testing chpsim trace production, be able to read in traces,
		and produce some textual dump for verification.  


2007-01-29	David Fang		<fangism@users.sourceforge.net>
