@@ -1,5 +1,13 @@
 # "test/ChangeLog"
 
+2007-02-03	David Fang		<fangism@users.sourceforge.net>
+
+	* HACKT-00-01-04-main-00-80-69-chpsim-02-14:
+	  Added support for chpsim checkpoint testing.  All 'pass' chpsimrc
+		tests automatically generate a checkpoint, using a
+		wrapper script that calls the actual script.  
+
+
 2007-01-27	David Fang		<fangism@users.sourceforge.net>
 
 	* HACKT-00-01-04-main-00-80-69-chpsim-02-04:
